# otus_c

./: .gitignore  .gitmodules
hw1/: Makefile  README.md  dbg.h  main.c  valgrind.txt
hw10/: Makefile  README.md  main.c
hw10/lib/: table.c
hw11/: Makefile  README.md  main.c  queue.c
hw11/lib/: darray.c  darray.h  hashmap_utils.c  hashmap_utils.h  list.c  list.h  open_hashmap.c  open_hashmap.h
hw11/tests/: darray_tests.c  minunit.h  open_hashmap_tests.c
hw12/: Makefile  README.md  compile_flags.txt  main.c  test.sh
hw13/: Makefile  README.md  main.c
hw13/lib/: dbg.h
hw14/: Dockerfile  Makefile  README.md  docker-compose.yaml  main.c  sqlite3_create.sh  tests.sh
hw14/lib/: dbw.c  dbw.h  rvec.h
hw14/tests/: runtests.sh  rvec_tests.c
hw2/: Makefile  README.md  main.c  main.h  symbols-converter.py
hw3/: .clang-format  Makefile  README.md  test  valgrind.out
hw3/src/: .clang-format  dbg.h  farray.c  farray.h  hashmap.c  hashmap.h  hashmap_utils.c  hashmap_utils.h  open_hashmap.c  open_hashmap.h  radixmap.c  radixmap.h
hw3/tests/: farray_tests.c  hashmap_tests.c  minunit.h  open_hashmap_tests.c  radixmap_tests.c
hw4/: README.md  meson.build
hw4/src/: gstotushw4.c  gstotushw4.h
hw5/: Makefile  README.md  valgrind.out  weather  weather.c
hw6/: Makefile  README.md  compile_flags.txt
hw6/src/: logger.c  logger.h
hw7/: Makefile  README.md  main.asm  main.c
hw8/: README.md
hw8/clib/src/: clib-build.c
hw8/clib/src/common/: clib-package.c
hw9/: Makefile  README.md  example.conf  main.c  otus_hw9.service
